--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -28,7 +28,7 @@ Entities.HProject.code                  = Code
 Entities.HProject.name                  = Name
 Entities.LocalEstimate                  = Local Estimate
 Entities.Mark                           = Mark
-Entities.Mark.name                      = Name
+Entities.Mark.name                      = Mark
 Entities.Milestone                      = Milestone
 Entities.ObjectEstimate                 = Object Estimate
 Entities.Phase                          = Phase
