--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -28,7 +28,7 @@ Entities.HProject.code                  = \u041A\u043E\u0434
 Entities.HProject.name                  = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 Entities.LocalEstimate                  = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
 Entities.Mark                           = \u041C\u0430\u0440\u043A\u0430
-Entities.Mark.name                      = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.Mark.name                      = \u041C\u0430\u0440\u043A\u0430
 Entities.Milestone                      = \u042D\u0442\u0430\u043F
 Entities.ObjectEstimate                 = \u041E\u0431\u044A\u0435\u043A\u0442\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
 Entities.Phase                          = \u0424\u0430\u0437\u0430
@@ -41,7 +41,7 @@ Entities.Stage.name                     = \u041D\u0430\u0438\u043C\u0435\u043D\u
 Entities.Work                           = \u0420\u0430\u0431\u043E\u0442\u0430
 Entities.WorkSet                        = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
 Entities.WorkSet.code                   = \u041A\u043E\u0434
-Entities.WorkSet.name                   = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.WorkSet.name                   = \u041D\u0430\u0438\u043C.\u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442\u0430
 Entities.WorkSet.pir                    = \u041A\u043E\u0434 \u0440\u0430\u0431\u043E\u0442\u044B \u041F\u0418\u0420
 Entities.WorkSet.planObject             = \u041E\u0431\u044A\u0435\u043A\u0442 \u0433\u0435\u043D\u043F\u043B\u0430\u043D\u0430
 Entities.WorkSet.smr                    = \u041A\u043E\u0434 \u0440\u0430\u0431\u043E\u0442\u044B \u0421\u041C\u0420
