--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -144,6 +144,7 @@ main.ui.logout                = Logout
 main.ui.menu.cotractRegister  = Register of contracts 
 main.ui.menu.createDocument   = Document creating
 main.ui.menu.estimateRegister = Register of estimate calculations
+main.ui.menu.processManager   = Process Manager
 
 reatedoc.CreateDocSettingsWindow.columnsGrid.columns.id = Field
 
