--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -144,6 +144,7 @@ main.ui.logout                = \u0412\u044B\u0445\u043E\u0434
 main.ui.menu.cotractRegister  = \u0420\u0435\u0435\u0441\u0442\u0440 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u043E\u0432
 main.ui.menu.createDocument   = \u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 main.ui.menu.estimateRegister = \u0420\u0435\u0435\u0441\u0442\u0440 \u0441\u043C\u0435\u0442\u043D\u044B\u0445 \u0440\u0430\u0441\u0447\u0435\u0442\u043E\u0432
+main.ui.menu.processManager   = \u041C\u0435\u043D\u0435\u0434\u0436\u0435\u0440 \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
 
 reatedoc.CreateDocSettingsWindow.columnsGrid.columns.id = \u041F\u043E\u043B\u0435
 
