Add item editors to Create Document UI

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -40,6 +40,14 @@ Entities.PlanObject.name                = Name
 Entities.Stage                          = Stage
 Entities.Stage.name                     = Name
 Entities.Work                           = Work
+Entities.Work.beginDate                 = Begin date
+Entities.Work.code                      = Code
+Entities.Work.endDate                   = End date
+Entities.Work.milestone                 = Milestone
+Entities.Work.name                      = Name
+Entities.Work.planObj                   = Plan Object
+Entities.Work.type                      = Work type
+Entities.Work.workSet                   = Work Set
 Entities.WorkSet                        = Work Set
 Entities.WorkSet.code                   = Code
 Entities.WorkSet.name                   = Name
@@ -123,17 +131,21 @@ createDocSettingsWindow.tabSheet.columns.cap = Columns
 createDocSettingsWindow.tabSheet.headers.cap = Table headers
 
 createdoc.CreateDocLayout.addWorksetButton.desc                  = Add workset..
+createdoc.CreateDocLayout.cancelItem.cap                         = Cancel
 createdoc.CreateDocLayout.delWorksetButton.desc                  = Remove workset..
 createdoc.CreateDocLayout.downloadWorksetButton.desc             = Download Excel Work sets
 createdoc.CreateDocLayout.projectTreeCaption                     = Project tree
+createdoc.CreateDocLayout.saveItem.cap                           = Save
 createdoc.CreateDocLayout.userLayoutSettings.desc                = User Layout settings
 createdoc.CreateDocLayout.worksetFilterField.placeholder         = Search..
 createdoc.CreateDocLayout.worksetFilterSettingsButton.desc       = Filter settings
 createdoc.WorkSetDocumentation.addDocumentButton.desc            = Add document..
 createdoc.WorkSetDocumentation.delDocumentButton.desc            = Remove document..
+createdoc.WorkSetDocumentation.descriptionField.placeholder      = Enter a short comment for processing...
 createdoc.WorkSetDocumentation.documentFilterField.placeholder   = Search document...
 createdoc.WorkSetDocumentation.documentFilterSettingsButton.desc = Filter settings
 createdoc.WorkSetDocumentation.downloadDocumentsButton.desc      = Download Excel Documents
+createdoc.WorkSetDocumentation.sendButton.cap                    = Send to work
 
 logon.button.signin  = Sign in
 logon.label.login    = Login
