--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -33,13 +33,21 @@ Entities.Mark.name                      = \u041D\u0430\u0438\u043C\u0435\u043D\u
 Entities.Milestone                      = \u042D\u0442\u0430\u043F
 Entities.ObjectEstimate                 = \u041E\u0431\u044A\u0435\u043A\u0442\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
 Entities.Phase                          = \u0424\u0430\u0437\u0430
-Entities.PlanObject                     = \u041E\u0431\u044A\u0435\u043A\u0442 \u0413\u041F
+Entities.PlanObject                     = \u041E\u0431.\u0413\u041F
 Entities.PlanObject.code                = \u041A\u043E\u0434
 Entities.PlanObject.cproject            = \u041A\u0430\u043F\u0438\u0442\u0430\u043B\u044C\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442
 Entities.PlanObject.name                = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 Entities.Stage                          = \u0421\u0442\u0430\u0434\u0438\u044F
 Entities.Stage.name                     = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 Entities.Work                           = \u0420\u0430\u0431\u043E\u0442\u0430
+Entities.Work.beginDate                 = \u0414\u0430\u0442\u0430 \u041A\u0421\u0413 (\u043D\u0430\u0447\u0430\u043B\u043E)
+Entities.Work.code                      = \u041A\u043E\u0434 \u0440\u0430\u0431\u043E\u0442\u044B
+Entities.Work.endDate                   = \u0414\u0430\u0442\u0430 \u041A\u0421\u0413 (\u043E\u043A\u043E\u043D\u0447\u0430\u043D\u0438\u0435)
+Entities.Work.milestone                 = \u042D\u0442\u0430\u043F \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430 
+Entities.Work.name                      = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0440\u0430\u0431\u043E\u0442\u044B
+Entities.Work.planObj                   = \u041E\u0431\u044A\u0435\u043A\u0442 \u0413\u041F
+Entities.Work.type                      = \u0412\u0438\u0434 \u0440\u0430\u0431\u043E\u0442\u044B
+Entities.Work.workSet                   = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
 Entities.WorkSet                        = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
 Entities.WorkSet.code                   = \u041A\u043E\u0434
 Entities.WorkSet.name                   = \u041D\u0430\u0438\u043C.\u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442\u0430
@@ -123,17 +131,21 @@ createDocSettingsWindow.tabSheet.columns.cap = \u0421\u0442\u043E\u043B\u0431\u0
 createDocSettingsWindow.tabSheet.headers.cap = \u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043A\u0438 \u0441\u0442\u043E\u043B\u0431\u0446\u043E\u0432
 
 createdoc.CreateDocLayout.addWorksetButton.desc                  = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
+createdoc.CreateDocLayout.cancelItem.cap                         = \u041E\u0442\u043C\u0435\u043D\u0430
 createdoc.CreateDocLayout.delWorksetButton.desc                  = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
 createdoc.CreateDocLayout.downloadWorksetButton.desc             = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432 Excel 
 createdoc.CreateDocLayout.projectTreeCaption                     = \u0414\u0435\u0440\u0435\u0432\u043E \u043F\u0440\u043E\u0435\u043A\u0442\u043E\u0432
+createdoc.CreateDocLayout.saveItem.cap                           = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 createdoc.CreateDocLayout.userLayoutSettings.desc                = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F
 createdoc.CreateDocLayout.worksetFilterField.placeholder         = \u0424\u0438\u043B\u044C\u0442\u0440 \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442\u043E\u0432...
 createdoc.CreateDocLayout.worksetFilterSettingsButton.desc       = \u041D\u0430\u0439\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0444\u0438\u043B\u044C\u0442\u0440\u0430
 createdoc.WorkSetDocumentation.addDocumentButton.desc            = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442..
 createdoc.WorkSetDocumentation.delDocumentButton.desc            = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442..
+createdoc.WorkSetDocumentation.descriptionField.placeholder      = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439 \u0434\u043B\u044F \u043E\u0431\u0440\u0430\u0431\u043E\u0442\u043A\u0438 \u0437\u0430\u0434\u0430\u0447\u0438... 
 createdoc.WorkSetDocumentation.documentFilterField.placeholder   = \u0424\u0438\u043B\u044C\u0442\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432...
 createdoc.WorkSetDocumentation.documentFilterSettingsButton.desc = \u041D\u0430\u0439\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0444\u0438\u043B\u044C\u0442\u0440\u0430
 createdoc.WorkSetDocumentation.downloadDocumentsButton.desc      = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432 Excel
+createdoc.WorkSetDocumentation.sendButton.cap                    = \u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C \u0432 \u0440\u0430\u0431\u043E\u0442\u0443
 
 logon.button.signin  = \u0412\u043E\u0439\u0442\u0438
 logon.label.login    = \u041B\u043E\u0433\u0438\u043D
