--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -1,4 +1,6 @@
 
+AccessDeniedView.text = You don't have access to this view.
+
 Entities.BaseEntity.changeDate          = Change date
 Entities.BaseEntity.createDate          = Create date
 Entities.BaseEntity.id                  = ID
@@ -61,6 +63,12 @@ ItemCreatingWindow.closeButton.cap = Cancel
 RegisterComponent.createItemButton.cap = Create
 RegisterComponent.filter.placeholder   = Search...
 RegisterComponent.openItemButton.cap   = Open
+
+SummaryEstimateCardComponent.closebutton.cap           = Close
+SummaryEstimateCardComponent.initialmaxpricebutton.cap = Calculate
+SummaryEstimateCardComponent.saveButton.desc           = Save
+SummaryEstimateCardComponent.sendforapprovalbutton.cap = Send for approval
+SummaryEstimateCardComponent.settingsbutton.cap        = Settings of summary estimate calculation
 
 adminView.ConfirmDialog.deleteGroup.info     = Are you sure want to delete the group?
 adminView.ConfirmDialog.deleteUser.close     = Close
