--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -1,4 +1,6 @@
 
+AccessDeniedView.text = \u0423 \u0412\u0430\u0441 \u043D\u0435\u0442 \u043F\u043E\u043B\u043D\u043E\u043C\u043E\u0447\u0438\u0439 \u043D\u0430 \u043F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0434\u0430\u043D\u043D\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u044B.
+
 Entities.BaseEntity.changeDate          = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C.
 Entities.BaseEntity.createDate          = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
 Entities.BaseEntity.id                  = \u0418\u0434.
@@ -61,6 +63,12 @@ ItemCreatingWindow.closeButton.cap = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
 RegisterComponent.createItemButton.cap = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
 RegisterComponent.filter.placeholder   = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0444\u0438\u043B\u044C\u0442\u0440...
 RegisterComponent.openItemButton.cap   = \u041E\u0442\u043A\u0440\u044B\u0442\u044C
+
+SummaryEstimateCardComponent.closebutton.cap           = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
+SummaryEstimateCardComponent.initialmaxpricebutton.cap = \u0420\u0430\u0441\u0447\u0435\u0442 \u041D\u041C\u0426
+SummaryEstimateCardComponent.saveButton.desc           = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0432\u0441\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u0421\u0421\u0420
+SummaryEstimateCardComponent.sendforapprovalbutton.cap = \u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C \u043D\u0430 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435
+SummaryEstimateCardComponent.settingsbutton.cap        = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0441\u0432\u043E\u0434\u043D\u043E\u0433\u043E \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
 
 adminView.ConfirmDialog.deleteGroup.info     = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u0440\u043E\u043B\u044C?
 adminView.ConfirmDialog.deleteUser.close     = \u041E\u0442\u043C\u0435\u043D\u0430
