--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -60,6 +60,9 @@ Entities.WorkSet.smr                    = Work code SMR
 ItemCreatingWindow.addButton.cap   = Save and close
 ItemCreatingWindow.closeButton.cap = Cancel
 
+ProcessManagerView.bpmnModelerTab.cap = BPMN Diagram
+ProcessManagerView.plotsTab.cap       = Statistics
+
 RegisterComponent.createItemButton.cap = Create
 RegisterComponent.filter.placeholder   = Search...
 RegisterComponent.openItemButton.cap   = Open
