--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -60,6 +60,9 @@ Entities.WorkSet.smr                    = \u041A\u043E\u0434 \u0440\u0430\u0431\
 ItemCreatingWindow.addButton.cap   = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0438 \u0437\u0430\u043A\u0440\u044B\u0442\u044C
 ItemCreatingWindow.closeButton.cap = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
 
+ProcessManagerView.bpmnModelerTab.cap = BPMN \u0441\u0445\u0435\u043C\u0430 \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
+ProcessManagerView.plotsTab.cap       = \u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430
+
 RegisterComponent.createItemButton.cap = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
 RegisterComponent.filter.placeholder   = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0444\u0438\u043B\u044C\u0442\u0440...
 RegisterComponent.openItemButton.cap   = \u041E\u0442\u043A\u0440\u044B\u0442\u044C
