BPMN analytics and modeler

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -1,6 +1,11 @@
 
 AccessDeniedView.text = You don't have access to this view.
 
+AnalyticsComponent.estimateCalc.approveEstimateCalc.cap  = Approve estimates calc.
+AnalyticsComponent.estimateCalc.lastMonth.cap            = Last month estimate calculations plot
+AnalyticsComponent.estimateCalc.lastWeek.cap             = Last week estimate calculations plot
+AnalyticsComponent.estimateCalc.rejectEstimateCalc.cap   = Reject estimates calc.
+
 Entities.BaseEntity.changeDate          = Change date
 Entities.BaseEntity.createDate          = Create date
 Entities.BaseEntity.id                  = ID
@@ -67,11 +72,12 @@ RegisterComponent.createItemButton.cap = Create
 RegisterComponent.filter.placeholder   = Search...
 RegisterComponent.openItemButton.cap   = Open
 
-SummaryEstimateCardComponent.closebutton.cap           = Close
-SummaryEstimateCardComponent.initialmaxpricebutton.cap = Calculate
-SummaryEstimateCardComponent.saveButton.desc           = Save
-SummaryEstimateCardComponent.sendforapprovalbutton.cap = Send for approval
-SummaryEstimateCardComponent.settingsbutton.cap        = Settings of summary estimate calculation
+SummaryEstimateCardComponent.closebutton.cap               = Close
+SummaryEstimateCardComponent.estimatecalculationfileds.cap = Summary Estimate Attributes 
+SummaryEstimateCardComponent.initialmaxpricebutton.cap     = Calculate
+SummaryEstimateCardComponent.saveButton.desc               = Save
+SummaryEstimateCardComponent.sendforapprovalbutton.cap     = Send for approval
+SummaryEstimateCardComponent.settingsbutton.cap            = Settings of summary estimate calculation
 
 adminView.ConfirmDialog.deleteGroup.info     = Are you sure want to delete the group?
 adminView.ConfirmDialog.deleteUser.close     = Close
