--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -1,10 +1,14 @@
 
+AbstractTreeGridComponent.downloadWorksetButton.desc = Download As Excel
+AbstractTreeGridComponent.filtersettings.desc        = Filter settings
+AbstractTreeGridComponent.settings.desc              = View settings
+
 AccessDeniedView.text = You don't have access to this view.
 
-AnalyticsComponent.estimateCalc.approveEstimateCalc.cap  = Approve estimates calc.
-AnalyticsComponent.estimateCalc.lastMonth.cap            = Last month estimate calculations plot
-AnalyticsComponent.estimateCalc.lastWeek.cap             = Last week estimate calculations plot
-AnalyticsComponent.estimateCalc.rejectEstimateCalc.cap   = Reject estimates calc.
+AnalyticsComponent.estimateCalc.approveEstimateCalc.cap = Approve estimates calc.
+AnalyticsComponent.estimateCalc.lastMonth.cap           = Last month estimate calculations plot
+AnalyticsComponent.estimateCalc.lastWeek.cap            = Last week estimate calculations plot
+AnalyticsComponent.estimateCalc.rejectEstimateCalc.cap  = Reject estimates calc.
 
 Entities.BaseEntity.changeDate          = Change date
 Entities.BaseEntity.createDate          = Create date
@@ -78,6 +82,11 @@ SummaryEstimateCardComponent.initialmaxpricebutton.cap     = Calculate
 SummaryEstimateCardComponent.saveButton.desc               = Save
 SummaryEstimateCardComponent.sendforapprovalbutton.cap     = Send for approval
 SummaryEstimateCardComponent.settingsbutton.cap            = Settings of summary estimate calculation
+
+TreeGridSettingsWindow.cap            = User view settings
+TreeGridSettingsWindow.columnstab.cap = Columns settings
+TreeGridSettingsWindow.headerstab.cap = Column headers Settings
+TreeGridSettingsWindow.tree.cap       = Grouping
 
 adminView.ConfirmDialog.deleteGroup.info     = Are you sure want to delete the group?
 adminView.ConfirmDialog.deleteUser.close     = Close
