--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -83,9 +83,11 @@ SummaryEstimateCardComponent.saveButton.desc               = Save
 SummaryEstimateCardComponent.sendforapprovalbutton.cap     = Send for approval
 SummaryEstimateCardComponent.settingsbutton.cap            = Settings of summary estimate calculation
 
+TreeGridSettingsWindow.addButton.cap  = Add new header
 TreeGridSettingsWindow.cap            = User view settings
 TreeGridSettingsWindow.columnstab.cap = Columns settings
 TreeGridSettingsWindow.headerstab.cap = Column headers Settings
+TreeGridSettingsWindow.newItem.cap    = New Item 
 TreeGridSettingsWindow.tree.cap       = Grouping
 
 adminView.ConfirmDialog.deleteGroup.info     = Are you sure want to delete the group?
