--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -83,9 +83,11 @@ SummaryEstimateCardComponent.saveButton.desc               = \u0421\u043E\u0445\
 SummaryEstimateCardComponent.sendforapprovalbutton.cap     = \u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C \u043D\u0430 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435
 SummaryEstimateCardComponent.settingsbutton.cap            = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0441\u0432\u043E\u0434\u043D\u043E\u0433\u043E \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
 
+TreeGridSettingsWindow.addButton.cap  = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
 TreeGridSettingsWindow.cap            = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u0438\u044F
 TreeGridSettingsWindow.columnstab.cap = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430 \u043F\u043E\u043B\u0435\u0439
 TreeGridSettingsWindow.headerstab.cap = \u041D\u0430\u0441\u0442\u0440\u043E\u043A\u0430 \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043A\u043E\u0432
+TreeGridSettingsWindow.newItem.cap    = \u041D\u043E\u0432\u044B\u0439 \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A 
 TreeGridSettingsWindow.tree.cap       = \u0413\u0440\u0443\u043F\u043F\u0438\u0440\u043E\u0432\u043A\u0430
 
 adminView.ConfirmDialog.deleteGroup.info     = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u0440\u043E\u043B\u044C?
