AbstractTreeGridComponent has been created

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -1,7 +1,10 @@
 
+AbstractTreeGridComponent.cancelSave.cap             = Cancel
 AbstractTreeGridComponent.downloadWorksetButton.desc = Download As Excel
 AbstractTreeGridComponent.filtersettings.desc        = Filter settings
+AbstractTreeGridComponent.saveItem.cap               = Save
 AbstractTreeGridComponent.settings.desc              = View settings
+AbstractTreeGridComponent.tree.cap                   = Grouping settings
 
 AccessDeniedView.text = You don't have access to this view.
 
