--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -1,7 +1,10 @@
 
+AbstractTreeGridComponent.cancelSave.cap             = \u041E\u0442\u043C\u0435\u043D\u0430
 AbstractTreeGridComponent.downloadWorksetButton.desc = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432 Excel
 AbstractTreeGridComponent.filtersettings.desc        = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430 \u0444\u0438\u043B\u044C\u0442\u0440\u0430
+AbstractTreeGridComponent.saveItem.cap               = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 AbstractTreeGridComponent.settings.desc              = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u0438\u044F
+AbstractTreeGridComponent.tree.cap                   = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430 \u0433\u0440\u0443\u043F\u043F\u0438\u0440\u043E\u0432\u043A\u0438
 
 AccessDeniedView.text = \u0423 \u0412\u0430\u0441 \u043D\u0435\u0442 \u043F\u043E\u043B\u043D\u043E\u043C\u043E\u0447\u0438\u0439 \u043D\u0430 \u043F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0434\u0430\u043D\u043D\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u044B.
 
