Summ estimate card

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -79,6 +79,10 @@ RegisterComponent.createItemButton.cap = Create
 RegisterComponent.filter.placeholder   = Search...
 RegisterComponent.openItemButton.cap   = Open
 
+SummaryEstimateCardComponent.calcFields.createDate.cap     = Create date
+SummaryEstimateCardComponent.calcFields.estimateCode.cap   = Estimate calculation code
+SummaryEstimateCardComponent.calcFields.name.cap           = Estimate calculation name
+SummaryEstimateCardComponent.calcFields.projectCode.cap    = Project code
 SummaryEstimateCardComponent.closebutton.cap               = Close
 SummaryEstimateCardComponent.estimatecalculationfileds.cap = Summary Estimate Attributes 
 SummaryEstimateCardComponent.initialmaxpricebutton.cap     = Calculate
