--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -79,6 +79,10 @@ RegisterComponent.createItemButton.cap = \u0421\u043E\u0437\u0434\u0430\u0442\u0
 RegisterComponent.filter.placeholder   = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0444\u0438\u043B\u044C\u0442\u0440...
 RegisterComponent.openItemButton.cap   = \u041E\u0442\u043A\u0440\u044B\u0442\u044C
 
+SummaryEstimateCardComponent.calcFields.createDate.cap     = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+SummaryEstimateCardComponent.calcFields.estimateCode.cap   = \u041A\u043E\u0434 \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
+SummaryEstimateCardComponent.calcFields.name.cap           = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+SummaryEstimateCardComponent.calcFields.projectCode.cap    = \u041A\u043E\u0434 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
 SummaryEstimateCardComponent.closebutton.cap               = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
 SummaryEstimateCardComponent.estimatecalculationfileds.cap = \u0410\u0442\u0440\u0438\u0431\u0443\u0442\u044B \u0441\u0432\u043E\u0434\u043D\u043E\u0433\u043E \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
 SummaryEstimateCardComponent.initialmaxpricebutton.cap     = \u0420\u0430\u0441\u0447\u0435\u0442 \u041D\u041C\u0426
