A little bit of everything

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -86,9 +86,11 @@ SummaryEstimateCardComponent.calcFields.projectCode.cap    = Project code
 SummaryEstimateCardComponent.closebutton.cap               = Close
 SummaryEstimateCardComponent.estimatecalculationfileds.cap = Summary Estimate Attributes 
 SummaryEstimateCardComponent.initialmaxpricebutton.cap     = Calculate
+SummaryEstimateCardComponent.priceLevel.cap                = Price level
 SummaryEstimateCardComponent.saveButton.desc               = Save
 SummaryEstimateCardComponent.sendforapprovalbutton.cap     = Send for approval
 SummaryEstimateCardComponent.settingsbutton.cap            = Settings of summary estimate calculation
+SummaryEstimateCardComponent.viewAttributes.cap            = View
 
 TreeGridSettingsWindow.addButton.cap  = Add new header
 TreeGridSettingsWindow.cap            = User view settings
@@ -198,6 +200,13 @@ reatedoc.CreateDocSettingsWindow.columnsGrid.columns.id = Field
 
 ru.gzpn.spc.csl.model.enums.DocType.local_estimate        = Local estimate
 ru.gzpn.spc.csl.model.enums.DocType.set_of_drawings       = Set of drawings
+ru.gzpn.spc.csl.model.enums.EstimateType.local_estimates  = Local estimates
+ru.gzpn.spc.csl.model.enums.EstimateType.object_estimates = Object estimates
+ru.gzpn.spc.csl.model.enums.ItemType.all                  = All
+ru.gzpn.spc.csl.model.enums.ItemType.my_items             = My items
+ru.gzpn.spc.csl.model.enums.PriceLevel.contract           = Contract
+ru.gzpn.spc.csl.model.enums.PriceLevel.current            = Current
+ru.gzpn.spc.csl.model.enums.PriceLevel.level_2000         = 2000
 ru.gzpn.spc.csl.model.enums.TaxType.INCLUDING_18_PERC     = With 18 perc
 ru.gzpn.spc.csl.model.enums.TaxType.NO                    = No
 ru.gzpn.spc.csl.model.enums.TaxType.NOT_INCLUDING_18_PERC = Without 18 perc
