--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -86,11 +86,13 @@ SummaryEstimateCardComponent.calcFields.projectCode.cap    = Project code
 SummaryEstimateCardComponent.closebutton.cap               = Close
 SummaryEstimateCardComponent.estimatecalculationfileds.cap = Summary Estimate Attributes 
 SummaryEstimateCardComponent.initialmaxpricebutton.cap     = Calculate
+SummaryEstimateCardComponent.itemsCombobox.placeholder     = Show
 SummaryEstimateCardComponent.priceLevel.cap                = Price level
 SummaryEstimateCardComponent.saveButton.desc               = Save
 SummaryEstimateCardComponent.sendforapprovalbutton.cap     = Send for approval
 SummaryEstimateCardComponent.settingsbutton.cap            = Settings of summary estimate calculation
 SummaryEstimateCardComponent.viewAttributes.cap            = View
+SummaryEstimateCardComponent.viewCombobox.placeholder      = Estimate
 
 TreeGridSettingsWindow.addButton.cap  = Add new header
 TreeGridSettingsWindow.cap            = User view settings
