LocEstimates were added to SummaryEstimateCardComponent

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -200,20 +200,24 @@ main.ui.menu.processManager   = Process Manager
 
 reatedoc.CreateDocSettingsWindow.columnsGrid.columns.id = Field
 
-ru.gzpn.spc.csl.model.enums.DocType.local_estimate        = Local estimate
-ru.gzpn.spc.csl.model.enums.DocType.set_of_drawings       = Set of drawings
-ru.gzpn.spc.csl.model.enums.EstimateType.local_estimates  = Local estimates
-ru.gzpn.spc.csl.model.enums.EstimateType.object_estimates = Object estimates
-ru.gzpn.spc.csl.model.enums.ItemType.all                  = All
-ru.gzpn.spc.csl.model.enums.ItemType.my_items             = My items
-ru.gzpn.spc.csl.model.enums.PriceLevel.contract           = Contract
-ru.gzpn.spc.csl.model.enums.PriceLevel.current            = Current
-ru.gzpn.spc.csl.model.enums.PriceLevel.level_2000         = 2000
-ru.gzpn.spc.csl.model.enums.TaxType.INCLUDING_18_PERC     = With 18 perc
-ru.gzpn.spc.csl.model.enums.TaxType.NO                    = No
-ru.gzpn.spc.csl.model.enums.TaxType.NOT_INCLUDING_18_PERC = Without 18 perc
-ru.gzpn.spc.csl.model.enums.WorkType.pir                  = PIR
-ru.gzpn.spc.csl.model.enums.WorkType.smr                  = SMR
+ru.gzpn.spc.csl.model.enums.DocType.local_estimate          = Local estimate
+ru.gzpn.spc.csl.model.enums.DocType.set_of_drawings         = Set of drawings
+ru.gzpn.spc.csl.model.enums.EstimateType.local_estimates    = Local estimates
+ru.gzpn.spc.csl.model.enums.EstimateType.object_estimates   = Object estimates
+ru.gzpn.spc.csl.model.enums.ItemType.all                    = All
+ru.gzpn.spc.csl.model.enums.ItemType.my_items               = My items
+ru.gzpn.spc.csl.model.enums.LocalEstimateStatus.approved    = Approved
+ru.gzpn.spc.csl.model.enums.LocalEstimateStatus.has_remarks = Has remarks
+ru.gzpn.spc.csl.model.enums.LocalEstimateStatus.in_approval = In approval
+ru.gzpn.spc.csl.model.enums.LocalEstimateStatus.in_work     = In work
+ru.gzpn.spc.csl.model.enums.PriceLevel.contract             = Contract
+ru.gzpn.spc.csl.model.enums.PriceLevel.current              = Current
+ru.gzpn.spc.csl.model.enums.PriceLevel.level_2000           = 2000
+ru.gzpn.spc.csl.model.enums.TaxType.INCLUDING_18_PERC       = With 18 perc
+ru.gzpn.spc.csl.model.enums.TaxType.NO                      = No
+ru.gzpn.spc.csl.model.enums.TaxType.NOT_INCLUDING_18_PERC   = Without 18 perc
+ru.gzpn.spc.csl.model.enums.WorkType.pir                    = PIR
+ru.gzpn.spc.csl.model.enums.WorkType.smr                    = SMR
 
 sessionExpired.button.reenter = Reenter
 sessionExpired.label.title    = Your session has expired
