--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -72,6 +72,9 @@ Entities.WorkSet.smr                    = Work code SMR
 ItemCreatingWindow.addButton.cap   = Save and close
 ItemCreatingWindow.closeButton.cap = Cancel
 
+LocalEstimatesTreeGridComponent.addItemButton.desc    = Create local estimate
+LocalEstimatesTreeGridComponent.removeItemButton.desc = Remove local estimate
+
 ProcessManagerView.bpmnModelerTab.cap = BPMN Diagram
 ProcessManagerView.plotsTab.cap       = Statistics
 
