--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -17,7 +17,7 @@ Entities.BaseEntity.changeDate          = \u0414\u0430\u0442\u0430 \u0438\u0437\
 Entities.BaseEntity.createDate          = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
 Entities.BaseEntity.id                  = \u0418\u0434.
 Entities.BaseEntity.version             = \u2116 \u0418\u0437\u043C\u0435\u043D.
-Entities.CProject                       = \u041A\u0430\u043F\u0438\u0442\u0430\u043B\u044C\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442
+Entities.CProject                       = \u041A\u0430\u043F. \u043F\u0440\u043E\u0435\u043A\u0442
 Entities.CProject.code                  = \u041A\u043E\u0434
 Entities.CProject.name                  = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 Entities.Contract                       = \u0414\u043E\u0433\u043E\u0432\u043E\u0440
@@ -37,7 +37,7 @@ Entities.EstimateCalculation.handler    = \u041E\u0431\u0440\u0430\u0431\u043E\u
 Entities.EstimateCalculation.name       = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 Entities.EstimateCost                   = \u0421\u043C\u0435\u0442\u043D\u0430\u044F \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
 Entities.EstimateHead                   = \u0413\u043B\u0430\u0432\u0430
-Entities.HProject                       = \u041A\u0440\u0443\u043F\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442
+Entities.HProject                       = \u041A\u0440\u0443\u043F. \u043F\u0440\u043E\u0435\u043A\u0442
 Entities.HProject.code                  = \u041A\u043E\u0434
 Entities.HProject.name                  = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 Entities.LocalEstimate                  = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
@@ -71,6 +71,9 @@ Entities.WorkSet.smr                    = \u041A\u043E\u0434 \u0440\u0430\u0431\
 
 ItemCreatingWindow.addButton.cap   = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0438 \u0437\u0430\u043A\u0440\u044B\u0442\u044C
 ItemCreatingWindow.closeButton.cap = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
+
+LocalEstimatesTreeGridComponent.addItemButton.desc    = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u043C\u0435\u0442\u0443
+LocalEstimatesTreeGridComponent.removeItemButton.desc = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0441\u043C\u0435\u0442\u0443
 
 ProcessManagerView.bpmnModelerTab.cap = BPMN \u0441\u0445\u0435\u043C\u0430 \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
 ProcessManagerView.plotsTab.cap       = \u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430
