--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -72,6 +72,8 @@ Entities.WorkSet.smr                    = Work code SMR
 ItemCreatingWindow.addButton.cap   = Save and close
 ItemCreatingWindow.closeButton.cap = Cancel
 
+LocalEstimatesApprovalGridComponent.xls.cap = Approval_of_Estimates.xls
+
 LocalEstimatesTreeGridComponent.addItemButton.desc    = Create local estimate
 LocalEstimatesTreeGridComponent.removeItemButton.desc = Remove local estimate
 
