--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -72,6 +72,11 @@ Entities.WorkSet.smr                    = \u041A\u043E\u0434 \u0440\u0430\u0431\
 ItemCreatingWindow.addButton.cap   = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0438 \u0437\u0430\u043A\u0440\u044B\u0442\u044C
 ItemCreatingWindow.closeButton.cap = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
 
+LocalEstimatesApprovalComponent.approveButton.cap        = \u0421\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u0442\u044C
+LocalEstimatesApprovalComponent.commentField.placeholder = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439 \u043A \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u043E\u0439 \u0441\u043C\u0435\u0442\u0435...
+LocalEstimatesApprovalComponent.rejectButton.cap         = \u041E\u0442\u043A\u043B\u043E\u043D\u0438\u0442\u044C
+LocalEstimatesApprovalComponent.settingsbutton.cap       = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0438\u043D\u0442\u0435\u0440\u0444\u0435\u0439\u0441\u0430 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u044F \u0441\u043C\u0435\u0442
+
 LocalEstimatesApprovalGridComponent.xls.cap = \u0421\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435_\u0421\u043C\u0435\u0442.xls
 
 LocalEstimatesTreeGridComponent.addItemButton.desc    = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u043C\u0435\u0442\u0443
