--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -72,6 +72,11 @@ Entities.WorkSet.smr                    = Work code SMR
 ItemCreatingWindow.addButton.cap   = Save and close
 ItemCreatingWindow.closeButton.cap = Cancel
 
+LocalEstimatesApprovalComponent.approveButton.cap        = Approve
+LocalEstimatesApprovalComponent.commentField.placeholder = Type a comment to the selected estimates
+LocalEstimatesApprovalComponent.rejectButton.cap         = Reject
+LocalEstimatesApprovalComponent.settingsbutton.cap       = Approval Settings
+
 LocalEstimatesApprovalGridComponent.xls.cap = Approval_of_Estimates.xls
 
 LocalEstimatesTreeGridComponent.addItemButton.desc    = Create local estimate
