Tasks assigning and mail notifications sending

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -29,6 +29,7 @@ Entities.Document                       = Document
 Entities.Document.code                  = Document Number
 Entities.Document.name                  = Designation
 Entities.Document.type                  = Type
+Entities.Document.work                  = Work
 Entities.EstimateCalculation            = Estimate Calculation
 Entities.EstimateCalculation.code       = Code
 Entities.EstimateCalculation.cproject   = Code project
