--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -29,6 +29,7 @@ Entities.Document                       = \u0414\u043E\u043A\u0443\u043C\u0435\u
 Entities.Document.code                  = \u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 Entities.Document.name                  = \u041E\u0431\u043E\u0437\u043D\u0430\u0447\u0435\u043D\u0438\u0435
 Entities.Document.type                  = \u0412\u0438\u0434
+Entities.Document.work                  = \u0420\u0430\u0431\u043E\u0442\u0430
 Entities.EstimateCalculation            = \u0421\u043C\u0435\u0442\u043D\u044B\u0439 \u0440\u0430\u0441\u0447\u0435\u0442
 Entities.EstimateCalculation.code       = \u041A\u043E\u0434 \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
 Entities.EstimateCalculation.cproject   = \u041A\u043E\u0434 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
