--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -105,6 +105,8 @@ SummaryEstimateCardComponent.settingsbutton.cap            = Settings of summary
 SummaryEstimateCardComponent.viewAttributes.cap            = View
 SummaryEstimateCardComponent.viewCombobox.placeholder      = Estimate
 
+TaskAlreadyAssigned.text = Task has already been assigned by user {0}.
+
 TreeGridSettingsWindow.addButton.cap  = Add new header
 TreeGridSettingsWindow.cap            = User view settings
 TreeGridSettingsWindow.columnstab.cap = Columns settings
