--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -13,6 +13,10 @@ AnalyticsComponent.estimateCalc.lastMonth.cap           = Last month estimate ca
 AnalyticsComponent.estimateCalc.lastWeek.cap            = Last week estimate calculations plot
 AnalyticsComponent.estimateCalc.rejectEstimateCalc.cap  = Reject estimates calc.
 
+CostsTreeGridComponent.addItemButton.desc       = Add cost
+CostsTreeGridComponent.bigdecimalconverter.desc = Must be an amount
+CostsTreeGridComponent.removeItemButton.desc    = Remove the cost
+
 Entities.BaseEntity.changeDate          = Change date
 Entities.BaseEntity.createDate          = Create date
 Entities.BaseEntity.id                  = ID
@@ -95,6 +99,8 @@ SummaryEstimateCardComponent.calcFields.estimateCode.cap   = Estimate calculatio
 SummaryEstimateCardComponent.calcFields.name.cap           = Estimate calculation name
 SummaryEstimateCardComponent.calcFields.projectCode.cap    = Project code
 SummaryEstimateCardComponent.closebutton.cap               = Close
+SummaryEstimateCardComponent.commentTab.cap                = Comment
+SummaryEstimateCardComponent.costsTab.cap                  = Estimated cost
 SummaryEstimateCardComponent.estimatecalculationfileds.cap = Summary Estimate Attributes 
 SummaryEstimateCardComponent.initialmaxpricebutton.cap     = Calculate
 SummaryEstimateCardComponent.itemsCombobox.placeholder     = Show
@@ -104,6 +110,7 @@ SummaryEstimateCardComponent.sendforapprovalbutton.cap     = Send for approval
 SummaryEstimateCardComponent.settingsbutton.cap            = Settings of summary estimate calculation
 SummaryEstimateCardComponent.viewAttributes.cap            = View
 SummaryEstimateCardComponent.viewCombobox.placeholder      = Estimate
+SummaryEstimateCardComponent.workSmrTab.cap                = Work SMR
 
 TaskAlreadyAssigned.text = Task has already been assigned by user {0}.
 
